modification des dto en record