@@ -5,7 +5,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -15,13 +14,11 @@ import com.safetynet.alertsapi.dto.ResponseFirestationDTO;
 import com.safetynet.alertsapi.dto.ResponseFloodDTO;
 import com.safetynet.alertsapi.dto.ResponsePhoneAlertDTO;
 import com.safetynet.alertsapi.dto.household.HouseholdInformationsDTO;
-import com.safetynet.alertsapi.dto.medicalrecorddto.MedicalRecordResponseFireDTO;
-import com.safetynet.alertsapi.dto.medicalrecorddto.MedicalRecordResponseFloodDTO;
+import com.safetynet.alertsapi.dto.medicalrecorddto.MedicalRecordBaseDTO;
 import com.safetynet.alertsapi.dto.persondto.PersonResponseChildAlertDTO;
 import com.safetynet.alertsapi.dto.persondto.PersonResponseFireDTO;
 import com.safetynet.alertsapi.dto.persondto.PersonResponseFirestationDTO;
 import com.safetynet.alertsapi.dto.persondto.PersonResponseFloodDTO;
-import com.safetynet.alertsapi.interfaces.PersonName;
 import com.safetynet.alertsapi.model.Firestation;
 import com.safetynet.alertsapi.model.MedicalRecord;
 import com.safetynet.alertsapi.model.Person;
@@ -46,20 +43,19 @@ public class PersonService {
     public ResponseFirestationDTO getPersonsByStationNumber(String stationNumber) {
         int child = 0;
         int adult = 0;
-        
+
         Firestation firestation = firestationRepository.findByStationNumber(stationNumber);
         List<Person> personsByStationNumber = personRepository.findByAddress(firestation.getAddress());
 
-        List<PersonResponseFirestationDTO> personsInformations = personsByStationNumber.stream().map(p -> {
-            PersonResponseFirestationDTO personDTO = new PersonResponseFirestationDTO();
-            personDTO.setFirstName(p.getFirstName());
-            personDTO.setLastName(p.getLastName());
-            personDTO.setAddress(p.getAddress());
-            personDTO.setPhone(p.getPhone());
-            return personDTO;
-        }).collect(Collectors.toList());
+        List<PersonResponseFirestationDTO> personsInformations = personsByStationNumber.stream()
+                .map(p -> new PersonResponseFirestationDTO(
+                        p.getFirstName(),
+                        p.getLastName(),
+                        p.getAddress(),
+                        p.getPhone()))
+                .toList();
 
-        for (PersonResponseFirestationDTO person : personsInformations) {
+        for (Person person : personsByStationNumber) {
             if (isAChild(person)) {
                 child++;
             } else {
@@ -67,132 +63,109 @@ public class PersonService {
             }
         }
 
-        ResponseFirestationDTO response = new ResponseFirestationDTO();
-        response.setChildCount(child);
-        response.setAdultCount(adult);
-        response.setPersons(personsInformations);
-
-        return response;
+        return new ResponseFirestationDTO(child, adult, personsInformations);
     }
 
     public Optional<ResponseChildAlertDTO> getChildsByAddress(String address) {
         // on récupère la liste des personnes par adresse
         List<Person> personsByAddress = personRepository.findByAddress(address);
 
-        // pour chaque personne trouvé, on récupère son nom, prénom et on calcul son age
-        List<PersonResponseChildAlertDTO> personsInformations = personsByAddress.stream().map(p -> {
-            PersonResponseChildAlertDTO personDTO = new PersonResponseChildAlertDTO();
-            personDTO.setFirstName(p.getFirstName());
-            personDTO.setLastName(p.getLastName());
-            MedicalRecord medicalRecord = medicalRecordRepository.findByFirstnameAndLastname(p.getFirstName(), p.getLastName());
-            personDTO.setAge(getAge(medicalRecord));
-            return personDTO;
-        }).collect(Collectors.toList());
-        
         // on filtre pour séparer les enfants et les adultes
-        List<PersonResponseChildAlertDTO> children = personsInformations.stream().filter(p -> isAChild(p)).toList();
-        List<PersonResponseChildAlertDTO> adults = personsInformations.stream().filter(p -> !isAChild(p)).toList();
-        
+        List<Person> children = personsByAddress.stream().filter(p -> isAChild(p)).toList();
+        List<Person> adults = personsByAddress.stream().filter(p -> !isAChild(p)).toList();
+
+        // pour chaque personne trouvé, on récupère son nom, prénom et on calcul son
+        // age
+        List<PersonResponseChildAlertDTO> childInformations = children.stream()
+                .map(c -> new PersonResponseChildAlertDTO(
+                        c.getFirstName(),
+                        c.getLastName(),
+                        getAge(medicalRecordRepository.findByFirstnameAndLastname(
+                                c.getFirstName(),
+                                c.getLastName()))))
+                .toList();
+
+        List<PersonResponseChildAlertDTO> adultInformations = adults.stream()
+                .map(a -> new PersonResponseChildAlertDTO(
+                        a.getFirstName(),
+                        a.getLastName(),
+                        getAge(medicalRecordRepository.findByFirstnameAndLastname(
+                                a.getFirstName(),
+                                a.getLastName()))))
+                .toList();
+
         if (children.isEmpty()) {
-            return Optional.empty();
+            return Optional.of(new ResponseChildAlertDTO(new ArrayList<>(), new ArrayList<>()));
         }
 
-        ResponseChildAlertDTO response = new ResponseChildAlertDTO();
-        response.setChildren(children);
-        response.setAdults(adults);
-
-        return Optional.of(response);
+        return Optional.of(new ResponseChildAlertDTO(childInformations, adultInformations));
     }
 
     public ResponsePhoneAlertDTO getPhonesByStationNumber(String stationNumber) {
         Firestation firestation = firestationRepository.findByStationNumber(stationNumber);
         List<Person> personsByStationNumber = personRepository.findByAddress(firestation.getAddress());
 
-        List<String> phoneNumbers = personsByStationNumber.stream().map(p -> p.getPhone()).collect(Collectors.toList());
+        List<String> phoneNumbers = personsByStationNumber.stream().map(p -> p.getPhone()).toList();
 
-        ResponsePhoneAlertDTO response = new ResponsePhoneAlertDTO();
-        response.setPhoneNumbers(phoneNumbers);
-
-        return response;
+        return new ResponsePhoneAlertDTO(phoneNumbers);
     }
 
     public ResponseFireDTO getPersonsByAdress(String address) {
-        
+
         Firestation firestation = firestationRepository.findByAddress(address);
         List<Person> personsByAddress = personRepository.findByAddress(address);
 
-        List<PersonResponseFireDTO> personsInformations = personsByAddress.stream().map(p -> {
-            // on récupere le dossier medicale puis on l'injecte dans le medicalRecordDTO
-            MedicalRecord medicalRecord = medicalRecordRepository.findByFirstnameAndLastname(p.getFirstName(), p.getLastName());
-            MedicalRecordResponseFireDTO medicalRecordDTO = new MedicalRecordResponseFireDTO();
-            medicalRecordDTO.setAllergies(medicalRecord.getAllergies());
-            medicalRecordDTO.setMedications(medicalRecord.getMedications());
+        List<PersonResponseFireDTO> personsInformations = personsByAddress.stream()
+                .map(p -> new PersonResponseFireDTO(
+                        p.getFirstName(),
+                        p.getLastName(),
+                        p.getPhone(),
+                        getAge(medicalRecordRepository.findByFirstnameAndLastname(
+                                p.getFirstName(),
+                                p.getLastName())),
+                        new MedicalRecordBaseDTO(
+                                medicalRecordRepository.findByFirstnameAndLastname(
+                                        p.getFirstName(),
+                                        p.getLastName()).getMedications(),
+                                medicalRecordRepository.findByFirstnameAndLastname(
+                                        p.getFirstName(),
+                                        p.getLastName()).getAllergies())))
+                .toList();
 
-            // on construit PersonResponseFireDTO puis on injecte son medicalRecordDTO
-            PersonResponseFireDTO personDTO = new PersonResponseFireDTO();
-            personDTO.setFirstName(p.getFirstName());
-            personDTO.setLastName(p.getLastName());
-            personDTO.setPhone(p.getPhone());
-            personDTO.setAge(getAge(medicalRecord));
-            personDTO.setMedicalRecord(medicalRecordDTO);
-            return personDTO;
-        }).collect(Collectors.toList());
-
-        ResponseFireDTO response = new ResponseFireDTO();
-        response.setFirestation(firestation);
-        response.setPersons(personsInformations);
-
-        return response;
+        return new ResponseFireDTO(firestation, personsInformations);
     }
 
     public List<ResponseFloodDTO> getHouseholdInformationsByStations(List<Integer> stations) {
+        List<ResponseFloodDTO> responseFloodDTOList = new ArrayList<>();
 
-        List<ResponseFloodDTO> responseList = new ArrayList<>();
-        
-        
-        for (Integer stationNumber : stations) {
-            Firestation firestation = firestationRepository.findByStationNumber(stationNumber.toString());
-            
-            if (firestation == null) {
-                throw new IllegalArgumentException("Station number not found");
-            }
-            // on récupère la liste des personnes par adresse
+        for (Integer station : stations) {
+            Firestation firestation = firestationRepository.findByStationNumber(station.toString());
             List<Person> personsByStationNumber = personRepository.findByAddress(firestation.getAddress());
-            
-            // pour chaque personne, on récupère son nom, prénom et on calcul son age
-            List<PersonResponseFloodDTO> personsInformations = personsByStationNumber.stream().map(p -> {
-                // dossier medical pour la personne
-                MedicalRecord medicalRecord = medicalRecordRepository.findByFirstnameAndLastname(p.getFirstName(), p.getLastName());
-                MedicalRecordResponseFloodDTO medicalRecordDTO = new MedicalRecordResponseFloodDTO();
-                medicalRecordDTO.setAllergies(medicalRecord.getAllergies());
-                medicalRecordDTO.setMedications(medicalRecord.getMedications());
-                
-                // la personne
-                PersonResponseFloodDTO personDTO = new PersonResponseFloodDTO();
-                personDTO.setFirstName(p.getFirstName());
-                personDTO.setLastName(p.getLastName());
-                personDTO.setPhone(p.getPhone());
-                personDTO.setAge(getAge(medicalRecord));
-                personDTO.setMedicalRecord(medicalRecordDTO);
-                return personDTO;
-            }).collect(Collectors.toList());
-            
-            List<HouseholdInformationsDTO> householdInformations = personsInformations.stream().map(p -> {
-                HouseholdInformationsDTO householdInformationsDTO = new HouseholdInformationsDTO();
-                householdInformationsDTO.setAddress(firestation.getAddress());
-                householdInformationsDTO.setPersons(personsInformations);
-                return householdInformationsDTO;
-            }).collect(Collectors.toList());
-            
-            
-            ResponseFloodDTO response = new ResponseFloodDTO();
-            response.setHouseholdInformations(householdInformations);
-            response.setFirestation(firestation);
 
-            responseList.add(response);
+            List<PersonResponseFloodDTO> personsInformations = personsByStationNumber.stream()
+                    .map(p -> new PersonResponseFloodDTO(p.getFirstName(),
+                            p.getLastName(),
+                            p.getPhone(),
+                            getAge(medicalRecordRepository.findByFirstnameAndLastname(
+                                    p.getFirstName(),
+                                    p.getLastName())),
+                            new MedicalRecordBaseDTO(
+                                    medicalRecordRepository.findByFirstnameAndLastname(
+                                            p.getFirstName(),
+                                            p.getLastName()).getMedications(),
+                                    medicalRecordRepository.findByFirstnameAndLastname(
+                                            p.getFirstName(),
+                                            p.getLastName()).getAllergies())))
+                    .toList();
+
+            HouseholdInformationsDTO householdInformations = new HouseholdInformationsDTO(
+                    firestation.getAddress(),
+                    personsInformations);
+
+            responseFloodDTOList.add(new ResponseFloodDTO(firestation, householdInformations));
         }
 
-        return responseList;
+        return responseFloodDTOList;
     }
 
     public List<String> getAllEmailsByCity(String city) {
@@ -205,7 +178,7 @@ public class PersonService {
         throw new UnsupportedOperationException("Unimplemented method 'getPersonInfoByName'");
     }
 
-    private boolean isAChild(PersonName person) {
+    private boolean isAChild(Person person) {
         String firstName = person.getFirstName();
         String lastName = person.getLastName();
         MedicalRecord medicalRecord = medicalRecordRepository.findByFirstnameAndLastname(firstName, lastName);
